Fix HTML encoding issues and update audio source

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
   </style>
 </head>
 <body>
-
-<audio id="bgm" loop>
-  <source src="https://cdn.pixabay.com/audio/2022/10/25/audio_946c1a1c4e.mp3" type="audio/mpeg">
+  
+<audio id="music">
+  <source src="music.mp3" type="audio/mpeg">
 </audio>
 
 <div class="card" id="card">
@@ -302,4 +302,5 @@
 </script>
 
 </body>
+
 </html>
