--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   </style>
 </head>
 <body>
-  
+
 <audio id="music">
   <source src="music.mp3" type="audio/mpeg">
 </audio>
@@ -180,7 +180,7 @@
   let tapCount = 0;
 
   const card = document.getElementById("card");
-  const music = document.getElementById("bgm");
+  const music = document.getElementById("music");
 
   const secretMessages = [
     "You’re my favourite notification 💕",
@@ -302,5 +302,4 @@
 </script>
 
 </body>
-
 </html>
