--- a/index.html
+++ b/index.html
@@ -161,6 +161,22 @@
       color: #444;
       animation: fadeIn 1s ease;
     }
+
+    /* ✨ Sparkle effect */
+    .sparkle {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: radial-gradient(circle, #fff 0%, #ff5f9e 80%);
+      border-radius: 50%;
+      pointer-events: none;
+      animation: sparkleAnim 1s linear forwards;
+    }
+
+    @keyframes sparkleAnim {
+      0% { transform: scale(0) translateY(0); opacity: 1; }
+      100% { transform: scale(1.5) translateY(-50px); opacity: 0; }
+    }
   </style>
 </head>
 <body>
@@ -249,6 +265,7 @@
       </p>
     `;
     hearts();
+    sparkleEffect(); // ✨ trigger sparkles
   }
 
   function unlockSecret() {
@@ -257,12 +274,9 @@
 
     const secret = document.createElement("div");
     secret.className = "ultimate-secret";
-    secret.innerHTML = `
-      💌  
-      Honestly…  
-      I didn’t just make this page for Galentine.  
-      I made it because <b>you’re special to me</b> 💗
-    `;
+
+    const randomMsg = secretMessages[Math.floor(Math.random() * secretMessages.length)];
+    secret.innerHTML = `💌 ${randomMsg}`;
     card.appendChild(secret);
   }
 
@@ -285,18 +299,27 @@
 
   function secretTap() {
     tapCount++;
-
     if (tapCount === 3) {
       const secret = document.createElement("div");
       secret.className = "secret";
 
-      const randomMsg =
-        secretMessages[Math.floor(Math.random() * secretMessages.length)];
-
+      const randomMsg = secretMessages[Math.floor(Math.random() * secretMessages.length)];
       secret.innerHTML = randomMsg;
       card.appendChild(secret);
 
       tapCount = 0;
+    }
+  }
+
+  // ✨ Sparkle function
+  function sparkleEffect() {
+    for(let i=0;i<20;i++){
+      const sparkle = document.createElement("div");
+      sparkle.className = "sparkle";
+      sparkle.style.left = (Math.random()*100) + "vw";
+      sparkle.style.top = (Math.random()*100) + "vh";
+      document.body.appendChild(sparkle);
+      setTimeout(()=> sparkle.remove(), 1000);
     }
   }
 </script>
